# MedicalExamManager

./: 11-2516298-REFEF.json  17-2516344-REFEF.json  52-2521833-REFEF.json  58-2521871-REFEF.json  68-2516274-REFEF.json  ai_interpretation.py  auth.py  dashboard.py  data_processing.py  database.py  main.py  pasted_text_1726223895877.txt  pyproject.toml  replit.nix  visualization.py
Esami/: 21-2519316-REFEF.json  46-2512995-REFEF.json  47-2513005-REFEF.json  49-2516791-REFEF.json  5-2511618-REFEF.json  51-2516801-REFEF.json  56-2516554-REFEF.json  56-2520184-REFEF.json  65-2520081-REFEF.json
data/: database.db  database.db-journal
locales/it/LC_MESSAGES/: messages.mo  messages.po
